用 Nanobar 做了个加载进度条。
修复了在正在加载时上传文件导致进度来回跳的问题。

--- a/src/style.css
+++ b/src/style.css
@@ -13,12 +13,25 @@ body {
 }
 
 .prog {
+  text-align: center;
+  font-size: 2rem;
+  color: white;
+}
+
+.prog-container {
   position: absolute;
   left: 50vw;
   top: 50vw;
   transform: translate(-50%, -50%);
-  text-align: center;
-  font-size: 2rem;
-  color: white;
   pointer-events: none;
+}
+
+.nanobar {
+  width: 70vw;
+  border: solid 1px white;
+  height: 12px;
+}
+
+.bar {
+  background-color: #25c4d3;
 }
