--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,42 @@
 body {
-  margin: 8px;
-  font-family: monospace, system-ui;
+  margin: 0;
+  font-family: monospace, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100dvh;
+  width: 100dvw;
+  overflow: hidden;
+}
+
+@media (min-aspect-ratio: 1/1) {
+  body {
+    flex-direction: row;
+  }
+}
+
+@media (max-aspect-ratio: 1/1) {
+  body {
+    flex-direction: column;
+  }
 }
 
 .polytope-renderer {
   display: block;
 }
 
+.controls {
+  overflow: auto;
+  padding: 8px;
+  height: 100%;
+  flex-grow: 1;
+}
+
 .info {
   position: absolute;
-  left: 12px;
-  top: 12px;
+  left: 4px;
+  top: 4px;
   font-size: 0.5rem;
   color: white;
   pointer-events: none;
