--- a/src/style.css
+++ b/src/style.css
@@ -40,8 +40,11 @@ body {
 .controls {
   overflow: auto;
   padding: 8px;
-  height: 100%;
   flex-grow: 1;
+}
+
+.config-file-input {
+  display: none;
 }
 
 .info {
