--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,13 @@ body {
   overflow: auto;
   padding: 8px;
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.file-input {
+  display: none;
 }
 
 .config-file-input {
