添加了正角柱、正反角柱、正双角柱。

--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,19 @@ body {
   flex-grow: 1;
 }
 
+.inf-families-container {
+  display: flex;
+  align-items: center;
+}
+
+.gen-inf-families {
+  margin-right: 4px;
+}
+
+.inf-family-params {
+  width: 2em;
+}
+
 .nav {
   display: flex;
   background-color: black;
