配置文件改为 YAML 格式。
现在 a 元素也可以被禁用了；
修复 Bug；
优化文档。

--- a/src/style.css
+++ b/src/style.css
@@ -94,6 +94,14 @@ div[id$="Slider"] .noUi-handle::after {
   display: none
 }
 
+a.disable {
+  color: #CBCBCB;
+  pointer-events: none;
+}
+a.disable:any-link {
+  color: #CBCBCB;
+}
+
 .sele-off {
   display: none;
   padding: 8px;
