修改反角柱高的计算，并添加不可能为正时的处理 同时优化了错误的显示。

--- a/src/style.scss
+++ b/src/style.scss
@@ -213,3 +213,8 @@ h1.accordion-header > .accordion-button {
 .bar {
   background-color: #25c4d3;
 }
+
+math {
+  font-family: "Times New Roman", serif;
+}
+
