--- a/src/style.scss
+++ b/src/style.scss
@@ -215,6 +215,5 @@ h1.accordion-header > .accordion-button {
 }
 
 math {
-  font-family: "Times New Roman", serif;
+  font-family: 'Times New Roman', serif;
 }
-
